test/ingress-jfvilas-traefik.yaml
# Forward authentication to example.com
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: testauth
#   namespace: dev
# spec:
#   forwardAuth:
#     address: http://jwta-authorizator-ja-jfvilas-svc.dev.svc.cluster.local:3000/validate/ja-jfvilas
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jfvilas
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: dev-testauth@kubernetescrd
spec:
  # tls:
  # - hosts:
  #   - www.jfvilas.com
  #   secretName: www.jfvilas.com.tls
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-nginx-svc
              port:
                number: 81
  #ingressClassName: nginx
