test/ingress-jfvilas.old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jfvilas
  namespace: dev
  # annotations:
    # nginx.ingress.kubernetes.io/auth-method: POST
    # nginx.ingress.kubernetes.io/auth-url: >-
    #   http://jwta-authorizator-ja-jfvilas-svc.dev.svc.cluster.local:3000/validate/ja-jfvilas
    # nginx.org/location-snippets: |
    #   auth_request /auth;
    # nginx.org/server-snippets: |
    #   location = /auth {
    #     return 200;
    #   }
spec:
  # tls:
  # - hosts:
  #   - www.jfvilas.com
  #   secretName: www.jfvilas.com.tls
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-nginx-svc
              port:
                number: 8080
  ingressClassName: nginx
