test/ingress-jfvilas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jfvilas
  namespace: dev
spec:
  #ingressClassName: nginx
  # tls:
  # - hosts:
  #   - www.jfvilas.com
  #   secretName: www.jfvilas.com.tls
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-nginx-svc
              port:
                number: 81
